# utils

./: .gitignore  CMakeLists.txt  multiset.hpp  recycler  set.hpp  tuple.cpp  union.cpp  utils.hpp
include/yuki/: Allocator.hpp  Array.hpp  Basic_Map.hpp  Basic_Set.hpp  Basic_VMultiSet.hpp  CHashTable.hpp  CHashTable_Str.hpp  Function_Ptr.hpp  Hash.hpp  Interval.hpp  Map.hpp  Map_OV.hpp  Ordered_Vector.hpp  Pair.hpp  RB_Tree.hpp  RingQueue.hpp  Set.hpp  Set_OV.hpp  Span.hpp  Tuple.hpp  VMultiSet.hpp  VMultiSet_OV.hpp  Variant.hpp  Vector.hpp  algorithm.hpp  cmd.hpp  functional.hpp  mmhash3.hpp  print.hpp  shared_ptr.hpp  string_split.hpp  tmp.hpp  uchar.hpp  unicode_base.hpp  unordered_map_str.hpp  unordered_set_str.hpp
include/yuki/unicode/: binary_properties.h  blocks.hpp  case.h  general_category.h  mirror.hpp  scripts.h
lib/: uchar_rare_encodings.cpp
lib/unicode/: binary_properties.cpp  case.cpp  general_category.cpp  scripts.cpp
tests/: SmallVector.cpp  alloc.cpp  array.cpp  cat.cpp  cht.cpp  cmd.cpp  cmdv0.cpp  cmdv0.hpp  cmdv1.cpp  cmdv1.hpp  conditional_return.cpp  cr  dbg_out.cpp  deq_bench.cpp  fmtout.cpp  fp.cpp  i_th.cpp  int_auto.cpp  interval.cpp  is_braced_init_list_convertible.cpp  mmhash3.cpp  multiset.cpp  ov.cpp  rbt.cpp  rq.cpp  shared_ptr.cpp  span.cpp  split.cpp  test.cpp  tmp.cpp  traverse_bench.cpp  u8bench.cpp  u8char.cpp  utf8.cpp  variant.cpp  vec_bench.cpp  vector.cpp
ugen/: PropertyValueAliases.txt  ugen.cpp
